--- a/index.html
+++ b/index.html
@@ -82,24 +82,19 @@
             <h2>Information</h2>
             <h3>Our Colors</h3>
             <div class="color-container">
-                <div class="color-quadrant" style="background: radial-gradient(#ffb19c, #fff);"></div>
-                <div class="color-quadrant" style="background: radial-gradient(#e389af, #fff);"></div>
-                <div class="color-quadrant" style="background: radial-gradient(#e39974, #fff);"></div>
-                <div class="color-quadrant" style="background: radial-gradient(#aec8e5, #fff);"></div>
-                <div class="color-quadrant" style="background: radial-gradient(#e0d5f3, #fff);"></div>
+                <div class="color-quadrant" style="background: radial-gradient(#f15a70, #fff);"></div>
+                <div class="color-quadrant" style="background: radial-gradient(#ed9154a9, #fff);"></div>
+                <div class="color-quadrant" style="background: radial-gradient(#b2d5f6, #fff);"></div>
+                <div class="color-quadrant" style="background: radial-gradient(#faa9b1, #fff);"></div>
             </div>
             <h3>
                 Location
             </h3>
             <div class="location-container">
                 <p>
-                    <strong>
+                    <strong class="venue-name">
                         THE COVENANT AT MURRAY MANSION
                     </strong>
-                    <br>
-                    <br>
-                    Both the ceremony and reception will be held here.
-                    <br>
                     <br>
                     <br>
                     <strong>
@@ -110,13 +105,12 @@
                     2219 Washington Ave, Racine, WI 53405
                     <br>
                     <br>
-                    <br>
                     <strong>
                         PARKING
                     </strong>
                     <br>
                     <br>
-                    The parking lot enterance is on located off of Taylor Ave. In the event that the venue parking lot becomes full, there is free street parking available (Kearney Ave and Taylor Ave).
+                    Parking is available at the venue.
                 </p>
                 <div class="google-maps">
                     <iframe 
@@ -200,12 +194,12 @@
                 <tr>
                     <td>4:30</td>
                     <td>Ceremony</td>
-                    <td>Officiated by</td>
+                    <td>Officiated by Mike Olson.</td>
                 </tr>
                 <tr>
                     <td>5:00</td>
                     <td>Cocktail Hour</td>
-                    <td>Complementary drinks, Hors D'oeuvres, and music will be inside Murray Mansion.</td>
+                    <td>Complementary drinks, charcuterie, and music will be inside Murray Mansion.</td>
                 </tr>
                 <tr>
                     <td>6:30</td>
