--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
                 <th>Description</th>
                 </tr>
                 <tr>
-                    <td>4:15</td>
-                    <td>Guest Arrival</td>
-                    <td>Enter through the main doors on the south side of the venue where the parking lot is.</td>
+                    <td>3:30</td>
+                    <td>Doors Open</td>
+                    <td>Enter through the doors on the south side of the venue where the parking lot is.</td>
                 </tr>
                 <tr>
                     <td>4:30</td>
@@ -134,9 +134,9 @@
                     <td>Officiated by Mike Olson.</td>
                 </tr>
                 <tr>
-                    <td>5:00</td>
+                    <td>~5:00</td>
                     <td>Cocktail Hour</td>
-                    <td>Complementary drinks, charcuterie, and music will be inside Murray Mansion.</td>
+                    <td>Complementary drinks, charcuterie, and music will be next door inside Murray Mansion.</td>
                 </tr>
                 <tr>
                     <td>6:30</td>
@@ -144,7 +144,7 @@
                     <td>Be prepared to give your <strong>best joke</strong>!</td>
                 </tr>
                 <tr>
-                    <td>8:00</td>
+                    <td>~8:00</td>
                     <td>Open Dance Floor</td>
                     <td>The DJ will accept music requests.</td>
                 </tr>
@@ -222,8 +222,8 @@
                 <div class="color-quadrant" style="background: radial-gradient(#b2d5f6, #fff);"></div>
                 <div class="color-quadrant" style="background: radial-gradient(#faa9b1, #fff);"></div>
                 <p>
-                    Get ready to bloom alongside us at our wedding! 
-                    Dress in your brightest and most floral attire to match the joyful atmosphere.
+                    Radiate joy with your choice of cocktail attire! <br>
+                    Opt for your down-to-earth florals and vibrant colors for the celebration.
                 </p>
             </div>
         </section>
